# sqlite-toolkit-mcp

./: README.md  pyproject.toml
sqlite_tool/: sqlite_tool_mcp_server.py
